# LogManager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  release.yml
cmake/: AddGitTag.cmake.in  local_hints.cmake  resources.cmake  version.cmake
cmake/modules/: FindZLIB.cmake
examples/: JSONLogFormat.json  LogFormat.json  RegexLogFormat.json
qtres/: LogManager_resources.qrc  _resources.qrc
src/: Application.cpp  Application.h  BookmarkTable.cpp  BookmarkTable.h  ExportSettingsDialog.cpp  ExportSettingsDialog.h  ExportSettingsDialog.ui  FilterHeader.cpp  FilterHeader.h  Format.h  FormatManager.cpp  FormatManager.h  InitialDataDialog.cpp  InitialDataDialog.h  InitialDataDialog.ui  Log.cpp  Log.h  LogFilter.cpp  LogFilter.h  LogFilterModel.cpp  LogFilterModel.h  LogManager.cpp  LogManager.h  LogModel.cpp  LogModel.h  LogService.cpp  LogService.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ScopeGuard.cpp  ScopeGuard.h  SearchBar.cpp  SearchBar.h  SearchBar.ui  SearchController.cpp  SearchController.h  SearchResultsWidget.cpp  SearchResultsWidget.h  SearchResultsWidget.ui  (+11 more)
src/FormatCreation/: CommentCreationDialog.cpp  CommentCreationDialog.h  CommentCreationDialog.ui  CommentWizardPage.cpp  CommentWizardPage.h  CommentWizardPage.ui  FieldCreationDialog.cpp  FieldCreationDialog.h  FieldCreationDialog.ui  FilenameFormatWizardPage.cpp  FilenameFormatWizardPage.h  FilenameFormatWizardPage.ui  FormatCreationWizard.cpp  FormatCreationWizard.h  FormatCreationWizard.ui  LogFieldsWizardPage.cpp  LogFieldsWizardPage.h  LogFieldsWizardPage.ui  LogFormatWizardPage.cpp  LogFormatWizardPage.h  LogFormatWizardPage.ui  ModuleListWizardPage.cpp  ModuleListWizardPage.h  ModuleListWizardPage.ui
src/LogManagement/: DirectoryScanner.cpp  DirectoryScanner.h  FilteredLogIterator.h  Format.h  FormatManager.cpp  FormatManager.h  Log.cpp  Log.h  LogEntry.h  LogEntryIterator.cpp  LogEntryIterator.h  LogManager.cpp  LogManager.h  LogMetadata.h  LogStorage.cpp  LogStorage.h  LogUtils.cpp  LogUtils.h  Session.cpp  Session.h
src/LogView/: FilterHeader.cpp  FilterHeader.h  FilteredLogModel.cpp  FilteredLogModel.h  LogFilterModel.cpp  LogFilterModel.h  LogModel.cpp  LogModel.h  LogView.cpp  LogView.h  LogViewUtils.h  MultiSelectComboBox.cpp  MultiSelectComboBox.h
src/Statistics/: LogHistogram.cpp  LogHistogram.h
src/UtilWidgets/: BookmarkTable.cpp  BookmarkTable.h  EntryLinkModel.cpp  EntryLinkModel.h  EntryLinkView.cpp  EntryLinkView.h  SearchBar.cpp  SearchBar.h  SearchBarDockWidget.cpp  SearchBarDockWidget.h  SearchResultsWidget.cpp  SearchResultsWidget.h
src/services/: ExportService.cpp  ExportService.h  SearchService.cpp  SearchService.h  SessionService.cpp  SessionService.h  TimelineService.cpp  TimelineService.h
tests/: DirectoryScannerTest.cpp  LogFilterModelTest.cpp  LogHistogramTest.cpp  LogModelTest.cpp  ServiceTests.cpp
